Update Spring Boot to 3.3.4 and parent project version to 5.3.24 for LTS support